# py-adminer

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup-docker.sh  startup.sh.save
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.pyadminer-web  docker-compose.local.yml  docker-compose.web.hub.yml  docker-compose.web.yml  docker-compose.yml  nginx-pyadminer-web.conf
docs/: ADMINER_GAP.md  PROJECT_IMPROVEMENT_PLAN.md  SETUP.md
pyadminer/: __init__.py  ai_client.py  ai_routes.py  ai_schema.py  ai_sql.py  ai_storage.py  app_factory.py  audit.py  auth.py  config.py  db.py  db_dashboard.py  diagram.py  diagram_build.py  extensions.py  routes.py  validators.py  viz_logic.py  viz_routes.py
static/css/: styles.css
static/js/: actions.js
templates/: ai_settings.html  audit_log.html  create_database.html  create_table.html  database_advanced.html  database_dashboard.html  database_diagram.html  database_options.html  edit_row.html  header.html  list_databases.html  list_tables.html  login_mysql.html  py_adminer.html  sidebar.html  table_data.html  table_diff.html  table_impact.html  table_options.html  table_quality.html  table_structure.html  table_viz.html
tests/: conftest.py  test_ai_sql.py  test_audit_log.py  test_db_errors.py  test_diagram_build.py  test_health.py  test_integration_mysql.py  test_validators.py
