[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadminer"
version = "0.2.0"
description = "Flask web UI for MySQL (Adminer-style)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "Flask>=3.0.0",
    "Flask-MySQLdb>=1.0.1",
    "Flask-WTF>=1.2.0",
    "Flask-Limiter>=3.5.0",
    "mysqlclient>=2.2.0",
    "Werkzeug>=3.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyadminer*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires running MySQL (see tests/conftest.py)",
]
